# fcc-ai-engineering-aws

./: .gitignore  =  README.md  requirements.txt
00-langchain-bedrock/: 01_LangChain-Bedrock.ipynb
01-embeddings/: README.md  embeddings-for-nlp.ipynb  embeddings-with-bedrock.ipynb
02-multimodal-llm/: 01_Amazon_Nova copy.ipynb  01_Amazon_Nova.ipynb
03-multimodal-rag/: 01_Multi_modal_RAG_Amazon_Bedrock_Nova.ipynb  README.md  requirements.txt
04-knowledge-base-agents/: README.md
05-multimodal-rag-with-colpali/: 01-multimodal-retrival-with-colpali.ipynb  02-multimodal-retrival-with-colpali-retreve-gen.ipynb  README.md  playground.ipynb
06-agents-with-rag/: .env_example  00-intro-agents.ipynb  01-intro-agents.ipynb  02-multimodal-RAG-with-colpali-and-Nova-CrewAI.ipynb  02-multimodal-retrival-with-colpali-retreve-gen-agents-crewAI-LIVE.ipynb  02-multimodal-retrival-with-colpali-retreve-gen-agents-crewAI.ipynb  README.md  env-example  requirements.txt  utils.py
06-multimodal-rag-with-agents/: 02-multimodal-RAG-with-colpali-and-Nova.ipynb  (+1 more)
08-strands-demo/: .gitignore  README.md  main.py  pyproject.toml
08-strands-demo/demo-agentic-voice-based-rag-with-vision-based-retrieval/: Introduction.ipynb  README.md  Voice_based_AgenticRAG.ipynb  Voice_based_AgenticRAG_with_output.ipynb  requirements.txt
08-strands-demo/demo-manim-video-gen/: README.md  app.py  start_mcp_server.py
08-strands-demo/demo-manim-video-gen/src/: manim_server.py
08-strands-demo/demo-summary-speak/: README.md  app.py
08-strands-demo/demo-summary-speak/docs/: chapter10.txt
(+25 files in other folders)
